<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Helper</string>
    <string name="edit_message">Enter HTTP Post URL here ..</string>
    <string name="button_send">Save</string>
    <string name="button_contacts">contacts</string>
    <string name="edit_phone">Enter Phone</string>
    <string name="button_add">add</string>
    <string name="button_rem">remove</string>
    <string name="out_message">massage</string>
    <string name="clean">clean</string>

</resources>
